apps/media/plex/plex-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: plex
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "plex.apps.int.scarey.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: plex-plex-media-server
          port: 32400
